--- a/style/sass/style.css
+++ b/style/sass/style.css
@@ -22,17 +22,7 @@
     pointer-events: none;
   }
 }
-@-moz-keyframes hide_loading {
-  /* sur Firefox */
-  80% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    display: none;
-    pointer-events: none;
-  }
-}
+
 @-webkit-keyframes hide_loading {
   /* sur Safari et Chrome */
   80% {
@@ -44,22 +34,14 @@
     pointer-events: none;
   }
 }
-@-o-keyframes hide_loading {
-  /* sur Opera */
-  80% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    display: none;
-    pointer-events: none;
-  }
-}
+
 #loading_content #load_spinner {
   position: relative;
-  top: 300px;
-  width: 75px;
-  height: 45px;
+  top: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  width: 10px;
+  height: 10px;
   display: inline-block;
   padding: 10px;
 }
@@ -79,72 +61,55 @@
 }
 
 #loading_content #load_spinner #l_spinner_part_1 {
-  animation-delay: 0s;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
   background-color: #7af3c1;
-
 }
 
 #loading_content #load_spinner #l_spinner_part_2 {
-  animation-delay: 0.25s;
+  -webkit-animation-delay: 0.25s;
+          animation-delay: 0.25s;
   background-color: #ff79da;
 }
 
 #loading_content #load_spinner #l_spinner_part_3 {
-  animation-delay: 0.5s;
-  
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
 }
 
 @keyframes anim_spinner {
   from {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   50% {
-    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
     opacity: 1;
   }
   to {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
-@-moz-keyframes anim_spinner {
-  /* sur Firefox */
-  from {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.3);
-    opacity: 1;
-  }
-  to {
-    transform: scale(1);
-  }
-}
+
 @-webkit-keyframes anim_spinner {
   /* sur Safari et Chrome */
   from {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   50% {
-    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
     opacity: 1;
   }
   to {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
-@-o-keyframes anim_spinner {
-  /* sur Opera */
-  from {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.3);
-    opacity: 1;
-  }
-  to {
-    transform: scale(1);
-  }
-}
+
 header {
   position: relative;
   width: 100%;
@@ -155,7 +120,6 @@ header .head-navbar {
   width: 100%;
   height: 65px;
   -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 3px 5px 0px rgba(217, 217, 217, 0.75);
   z-index: 1;
 }
@@ -166,8 +130,10 @@ header .head-navbar #home-button {
   left: 10px;
   width: 35px;
   cursor: pointer;
-  transform: rotate(90deg);
-  transition-duration: 0.2s;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
   border: 2px solid transparent;
   border-radius: 45px;
   padding: 3px;
@@ -191,6 +157,7 @@ header .head-location {
   width: 100%;
   background-color: #e2e2e2;
 }
+
 @media (min-width: 700px) {
   header .head-location {
     top: 0px;
@@ -246,14 +213,15 @@ header .head-restaurant {
   background-size: 100% 110%;
   background-position: 0px 60%;
   -webkit-box-shadow: inset 0px -3px 40px 0px #000000c4;
-  -moz-box-shadow: inset 0px -3px 40px 0px #000000c4;
   box-shadow: inset 0px -3px 40px 0px #000000c4;
 }
+
 @media (min-width: 700px) {
   header .head-restaurant {
     background-size: 100% 220%;
   }
 }
+
 @media (min-width: 1200px) {
   header .head-restaurant {
     background-size: 100% 300%;
@@ -290,18 +258,21 @@ header .head-intro #introduction #explore-btn {
   margin-top: 15px;
   background: #9356dc;
   background: linear-gradient(340deg, #9356dc 0%, #ff79da 100%);
-  transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
 }
 
 header .head-intro #introduction #explore-btn:hover {
   opacity: 0.8;
-  transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .main-container {
   width: 100%;
   display: inline-block;
 }
+
 @media (min-width: 1200px) {
   .main-container {
     width: 1200px;
@@ -318,6 +289,7 @@ header .head-intro #introduction #explore-btn:hover {
   width: 72%;
   display: inline-block;
 }
+
 @media (min-width: 700px) {
   .main-container .tutorial-s-1 {
     margin-top: 35px;
@@ -326,6 +298,7 @@ header .head-intro #introduction #explore-btn:hover {
     width: 35%;
   }
 }
+
 @media (min-width: 992px) {
   .main-container .tutorial-s-1 {
     margin-top: 35px;
@@ -334,6 +307,7 @@ header .head-intro #introduction #explore-btn:hover {
     width: 30%;
   }
 }
+
 @media (min-width: 1200px) {
   .main-container .tutorial-s-1 {
     margin-top: 35px;
@@ -356,15 +330,17 @@ header .head-intro #introduction #explore-btn:hover {
   height: 65px;
   margin: 15px 0px 15px 0px;
   background-color: #f7f7f7;
-  box-shadow: 2px 3px 9px 0px rgba(212, 212, 212, 0.75);
-  transition-duration: 0.25s;
+  -webkit-box-shadow: 2px 3px 9px 0px rgba(212, 212, 212, 0.75);
+          box-shadow: 2px 3px 9px 0px rgba(212, 212, 212, 0.75);
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
   cursor: pointer;
   display: inline-block;
 }
 
 .main-container .tutorial-s-1 .tutorial-title:hover {
-  transform: scale(1.02);
-  box-shadow: 2px 8px 15px 0px #e2e2e2;
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
 }
 
 .main-container .tutorial-s-1 .tutorial-title .tuto-number {
@@ -386,7 +362,8 @@ header .head-intro #introduction #explore-btn:hover {
   position: absolute;
   top: 18px;
   left: 45px;
-  filter: brightness(0.6);
+  -webkit-filter: brightness(0.6);
+          filter: brightness(0.6);
 }
 
 .main-container .tutorial-s-1 .tutorial-title .tuto-titlename {
@@ -406,6 +383,7 @@ header .head-intro #introduction #explore-btn:hover {
   width: 72%;
   display: inline-block;
 }
+
 @media (min-width: 700px) {
   .main-container .restaurants-s-1 {
     width: 55%;
@@ -413,6 +391,7 @@ header .head-intro #introduction #explore-btn:hover {
     float: right;
   }
 }
+
 @media (min-width: 992px) {
   .main-container .restaurants-s-1 {
     width: 62%;
@@ -420,6 +399,7 @@ header .head-intro #introduction #explore-btn:hover {
     float: right;
   }
 }
+
 @media (min-width: 1200px) {
   .main-container .restaurants-s-1 {
     width: 60%;
@@ -433,16 +413,19 @@ header .head-intro #introduction #explore-btn:hover {
   font-size: 20px;
   color: #666;
 }
+
 @media (min-width: 700px) {
   .main-container .restaurants-s-1 h3 {
     margin-left: 12%;
   }
 }
+
 @media (min-width: 992px) {
   .main-container .restaurants-s-1 h3 {
     margin-left: 8%;
   }
 }
+
 @media (min-width: 1200px) {
   .main-container .restaurants-s-1 h3 {
     margin-left: 2%;
@@ -459,25 +442,30 @@ header .head-intro #introduction #explore-btn:hover {
   width: 100%;
   height: 280px;
   background-color: #f1f1f1;
-  box-shadow: 0px 3px 5px 0px rgba(239, 239, 239, 0.75);
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(239, 239, 239, 0.75);
+          box-shadow: 0px 3px 5px 0px rgba(239, 239, 239, 0.75);
   border-radius: 10px;
   overflow: hidden;
   text-align: left;
   cursor: pointer;
-  transition-duration: 0.25s;
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
 }
+
 @media (min-width: 700px) {
   .main-container .restaurants-s-1 .item-x {
     width: 80%;
     margin: 15px;
   }
 }
+
 @media (min-width: 992px) {
   .main-container .restaurants-s-1 .item-x {
     width: 40%;
     margin: 15px;
   }
 }
+
 @media (min-width: 1200px) {
   .main-container .restaurants-s-1 .item-x {
     width: 45%;
@@ -512,11 +500,13 @@ header .head-intro #introduction #explore-btn:hover {
 .main-container .restaurants-s-1 .item-x .item-x-img img {
   width: 100%;
   height: 100%;
-  transition-duration: 0.25s;
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
 }
 
 .main-container .restaurants-s-1 .item-x .item-x-img img:hover {
-  transform: scale(1.25);
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25);
 }
 
 .main-container .restaurants-s-1 .item-x .item-x-name {
@@ -538,36 +528,45 @@ header .head-intro #introduction #explore-btn:hover {
   position: absolute;
   bottom: 22px;
   width: 35px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   height: 35px;
   right: 20px;
   cursor: pointer;
-  background: url("../images/logo/like_logo.png") no-repeat;
+  background: url("../../../images/logo/like_logo.png") no-repeat;
   background-size: 35px 35px;
+  -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
 .main-container .item-x-like::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   width: 100%;
   height: 0%;
   opacity: 0;
-  transition-duration: 0.8s;
+  -webkit-transition-duration: 0.8s;
+          transition-duration: 0.8s;
   overflow: hidden;
 }
 
 .main-container .item-x-like:hover::after {
-  background: url("../images/logo/likeset_logo.png") no-repeat;
+  background: url("../../../images/logo/like_logo.png") no-repeat;
   background-size: 35px 35px;
   height: 100%;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   opacity: 1;
 }
 
 .main-container .hide-tutorial {
   display: none;
 }
+
 @media (min-width: 1200px) {
   .main-container .hide-tutorial {
     display: block;
@@ -589,6 +588,7 @@ header .head-intro #introduction #explore-btn:hover {
   border-bottom-left-radius: 0px;
   width: 100%;
 }
+
 @media (min-width: 1200px) {
   .main-container .menu-s-1 {
     float: right;
@@ -616,42 +616,55 @@ header .head-intro #introduction #explore-btn:hover {
   display: block;
   max-width: 100%;
   margin: 32px;
-  animation: fadein 1.5s both;
-  -moz-animation: fadein 1.5s both;
-  -webkit-animation: fadein 1.5s both;
-  -o-animation: fadein 1.5s both;
+  animation: fadein 1s both;
+  -moz-animation: fadein 1s both;
+  -webkit-animation: fadein 1s both;
+  -o-animation: fadein 1s both;
   opacity: 0;
 }
 
 .main-container .menu-s-1 .m-cat-1 {
-  animation-delay: 0.5s;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
 }
 
 .main-container .menu-s-1 .m-cat-2 {
-  animation-delay: 1s;
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
 }
 
 .main-container .menu-s-1 .m-cat-3 {
-  animation-delay: 1.5s;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
 }
-
 
 @keyframes fadein {
-  from { opacity:0; transform: translateY(20px); }
-  to { opacity:1; transform: translateY(0px); }
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
 }
-@-moz-keyframes fadein { /* sur Firefox */
-  from { opacity:0; transform: translateY(20px); }
-  to { opacity:1; transform: translateY(0px); }
+
+@-webkit-keyframes fadein {
+  /* sur Safari et Chrome */
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
 }
-@-webkit-keyframes fadein { /* sur Safari et Chrome */
-  from { opacity:0; transform: translateY(20px); }
-  to { opacity:1; transform: translateY(0px); }
-}
-@-o-keyframes fadein { /* sur Opera */
-  from { opacity:0; transform: translateY(20px); }
-  to { opacity:1; transform: translateY(0px); }
-}
+
 .main-container .menu-s-1 .menu-category .m-cat-label {
   position: relative;
   top: 12px;
@@ -662,7 +675,7 @@ header .head-intro #introduction #explore-btn:hover {
 }
 
 .main-container .menu-s-1 .menu-category .m-cat-label::after {
-  content: "";
+  content: '';
   margin-top: 2px;
   width: 35px;
   height: 3px;
@@ -683,26 +696,22 @@ header .head-intro #introduction #explore-btn:hover {
   margin: 15px;
   margin-left: 0px;
   -webkit-box-shadow: 0px 2px 11px 2px #dadada;
-  -moz-box-shadow: 0px 2px 11px 2px #dadada;
   box-shadow: 0px 2px 11px 2px #dadada;
   cursor: pointer;
-  border: solid 5px white;
-  transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
   overflow: hidden;
 }
 
 .main-container .menu-s-1 .menu-category .m-content-list li:hover {
   -webkit-box-shadow: 0px 2px 11px 2px #cacaca;
-  -moz-box-shadow: 0px 2px 11px 2px #cacaca;
   box-shadow: 0px 2px 11px 2px #cacaca;
-}
-.main-container .menu-s-1 .menu-category .m-content-list li:hover .m-list-effect {
-  right: 0px;  
 }
 
 .main-container .menu-s-1 .menu-category .m-content-list li p {
   padding: 0;
   margin: 0;
+  position: -webkit-sticky;
   position: sticky;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -727,11 +736,12 @@ header .head-intro #introduction #explore-btn:hover {
   height: 100%;
   border-radius: 10px;
   border-right: 65px solid #8fdeca;
-  transition-duration: 0.25s;
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
 }
 
 .main-container .menu-s-1 .menu-category .m-content-list li .m-list-effect::after {
-  content: "";
+  content: '';
   position: absolute;
   right: -45px;
   top: 20px;
@@ -739,14 +749,20 @@ header .head-intro #introduction #explore-btn:hover {
   height: 30px;
   background: url("../images/logo/confirm_logo.png") no-repeat;
   background-size: 100% 100%;
-  transform: rotate(360deg);
-  transition-duration: 0.35s;
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+  -webkit-transition-duration: 0.35s;
+          transition-duration: 0.35s;
 }
 
 .main-container .menu-s-1 .menu-category .m-content-list li .m-list-effect:hover::after {
-  transform: rotate(0deg);
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
 }
 
+.main-container .menu-s-1 .menu-category .m-content-list li .m-list-effect:hover {
+  right: 0px;
+}
 
 .main-container .menu-s-1 .menu-category .m-content-list li .m-list-effect .m-list-price {
   position: absolute;
@@ -757,8 +773,9 @@ header .head-intro #introduction #explore-btn:hover {
 }
 
 .back-footer {
-  margin-top: 0px;
+  margin-top: -0px;
 }
+
 @media (min-width: 1200px) {
   .back-footer {
     margin-top: -250px;
@@ -777,6 +794,7 @@ footer .footer-sizing {
   padding-bottom: 50px;
   width: 80%;
 }
+
 @media (min-width: 1200px) {
   footer .footer-sizing {
     width: 1090px;
@@ -784,7 +802,8 @@ footer .footer-sizing {
 }
 
 footer .footer-sizing #footer-logo {
-  filter: brightness(100);
+  -webkit-filter: brightness(100);
+          filter: brightness(100);
   width: 120px;
   margin-top: 45px;
   display: block;
@@ -800,9 +819,11 @@ footer .footer-sizing .footer-btns {
   border-bottom: 2px dotted #797979;
   margin-right: 25px;
   text-decoration: none;
-  transition-duration: 0.25s;
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
   max-width: 100%;
 }
+
 @media (min-width: 576px) {
   footer .footer-sizing .footer-btns {
     max-width: 240px;
@@ -827,8 +848,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #333;
 }
-
 /*# sourceMappingURL=style.css.map */
